# ArtificialNeuralNetworkCppSource

./: CMakeLists.txt  main.cpp
includes/: dealloc_all.hpp  layer.hpp  matrix.hpp  neural_network.hpp  neuron.hpp
includes/utils/: matrix_to_vector.hpp  multiply_matrix.hpp
sources/: layer.cpp  matrix.cpp  neural_network.cpp  neuron.cpp
sources/utils/: matrix_to_vector.cpp  multiply_matrix.cpp
